    intersection and getIntersection methods to the AABB class.  Added a
    getLength method to the Interval class.
  - Moved getUserData to the Constraint class so that you can now assign a
    user object to contact constraints.
  - Added initial capacity parameters to the constructors of relevant classes
    to help size internal structures appropriately for better performance.

Bug Fixes:
  - Fixed a bug in the ContactConstraintSolver where if there were two contacts
    and just one was disabled, it was still possible that they would both
    be solved.
  - The expand methods in the Interval and AABB classes would accept a negative
    expansion amount.  If the expansion was larger than the size, the interval
    or AABB would be invalid.  This has been fixed to return degenerate
    versions (about the mid point) instead.

Deprecated:
  - World class methods remove(Body,boolean), remove(Body), remove(Joint),
    removeAll, removeAll(boolean), add(Body), add(Joint), and removeListeners
    replaced with removeBody(Body,boolean), removeBody(Body), 
    removeJoint(Joint), removeAllBodiesAndJoints, 
    removeAllBodiesAndJoints(boolean), addBody(Body), addJoint(Joint), and
    removeAllListeners respectively.
  - RectangularBounds replaced with AxisAlignedBounds.
  - Body class methods apply(double), apply(Force), apply(Torque), 
    apply(Vector2), and apply(Vector2, Vector2) replaced with 
    applyTorque(double), applyForce(Force), applyTorque(Torque), 
    applyForce(Vector2), and applyForce(Vector2, Vector2) respectively.
  - ContactManager.isEmpty() replaced with ContactManager.isCacheEmpty()

Breaking Changes:
  - The Step.update(double) method has been changed from public to protected.
  - Changed the ContactConstraint to have a List of Contacts instead of the
    Contact array.
  - The Settings.setStepFrequency method has been changed to accept 
    1/frequency (1/60) instead of frequency (60) as before. In versions before